Updated JS File

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "Generator"
   ],
   "author": "Tim Dolan",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^9.2.0"
+  }
 }
